--- a/website/index.html
+++ b/website/index.html
@@ -6,40 +6,21 @@
   <meta name="description" content="Smart Food — Online Food Ordering & Delivery in Nepal">
   <title>Smart Food — Home</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="./assets/images/logo.png">
-
-  <!-- Global Background / Layout CSS -->
+  <!-- Global CSS -->
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/background.css">
 
   <!-- JS -->
   <script src="./js/main.js" defer></script>
+  <script src="./js/app-pages.js" defer></script>
 </head>
 <body>
+  <!-- Navbar Component Injected -->
+  <div id="navbar"></div>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="site-bar container">
-      <a href="index.html" class="logo" aria-label="Smart Food home">
-        <img src="./assets/images/logo.png" alt="Smart Food logo" class="logo-img">
-        <span>Smart<span class="brand-color">Food</span></span>
-      </a>
-
-      <!-- MAIN NAV -->
-      <nav class="main-nav" aria-label="Primary Navigation">
-  <a href="#home">Home</a>
-  <a href="#services">Services</a>
-  <a href="#about">About</a>
-  <a href="./html/contact.html">Contact</a>
-
-  <!-- Highlighted login button -->
-  <a href="./html/login.html" class="btn-nav">Login</a>
-</nav>
-
-      <!-- Mobile menu button -->
+      <!-- Mobile Menu Button -->
       <button class="hamburger" aria-label="Menu" id="hamburgerBtn">☰</button>
     </div>
-  </header>
 
   <!-- MAIN CONTENT -->
   <main>
@@ -128,7 +109,6 @@
   </footer>
 
   <script>
-    // Fallback year
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 
